--- a/more/partners.html
+++ b/more/partners.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Eaglercrack</title>
+    <title>EaglercrackX</title>
     
     <nav class="nav">
       <div class="logo">
           <img src="/eaglercraft.jpg" alt="Logo">
-          <h1>Eaglercrack</h1>
+          <h1>EaglercrackX</h1>
       </div>
       <div class="spacer"></div>
       <ul class="navElements">
