--- a/test.html
+++ b/test.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Eaglercrack</title>
+    <title>EaglercrackX</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 
     <nav class="nav">
       <div class="logo">
           <img src="/assets/eaglercraft.jpg" alt="Logo">
-          <h1>Eaglercrack</h1>
+          <h1>EaglercrackX</h1>
       </div>
       <div class="spacer"></div>
       <ul class="navElements">
@@ -36,52 +35,104 @@
 </head>
 
 <body>
-  <main class="cards">
-    <h1 class="cards__heading">More...</h1>
-    <div class="cards cards">
-      <div class="cards__inner">
-        <!-- Start the blogs -->
-                <div class="cards__card card">
-          <h2 class="card__heading">Discord</h2>
-          <ul role="list" class="card__bullets flow">
-            <li>Join the official Eaglercrack discord!</li>
-            <br>  
-            <br>
-          </ul>
-          <a href="https://discord.gg/qAbTAAv6dU" class="card__cta cta">Join...</a>
-          <a href="/more/widget.html" class="card__cta cta">Widget Bot...</a>
-        </div>
+<main class="cards">
+  <h1 class="cards__heading">Servers</h1>   
+  <div class="cards cards">
+    <div class="cards__inner">
+      <!-- Start -->
+          <div class="cards__card card">
+            <h2 class="card__heading">ArchMC</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>1.8 Server IP</h4>
+              <li>wss://mc.arch.lol</li>
+              <br>
+            </ul>
+            <a href="" class="card__cta cta">Copy IP</a>
+          </div>
 
-        <div class="cards__card card">
-          <h2 class="card__heading">Eaglercrack Archive</h2>
-          <ul role="list" class="card__bullets flow">
-            <li>Looking for <strong>MORE</strong> clients? Eaglercrack Archive is the <strong>BIGGEST</strong> eaglercraft archive!</li>
-          </ul>
-          <a href="https://discord.gg/qAbTAAv6dU" class="card__cta cta">Soon...</a>
-        </div>
+          <div class="cards__card card">
+            <h2 class="card__heading">Zentic</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>1.8 Server IP</h4>
+              <li>wss://zentic.cc</li>
+              <br>
+            </ul>
+            <a href="" class="card__cta cta">Copy IP</a>
+          </div>
+          
+          <div class="cards__card card">
+            <h2 class="card__heading">Aeon Network</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>1.8 Server IP</h4>
+              <li>wss://aeon-network.net/1.8</li>
+              <br>
+            </ul>
+            <a href="" class="card__cta cta">Copy IP</a>
+          </div>
 
-        <div class="cards__card card">
-          <h2 class="card__heading">Google forms</h2>
-          <ul role="list" class="card__bullets flow">
-            <li>Make a Google form if you want to be partner, add your server/client to the list, etc.</li>
-            <br>
-          </ul>
-          <a href="/more/forms.html" class="card__cta cta">Visit...</a>
-        </div>
+          <div class="cards__card card">
+            <h2 class="card__heading">Legend smp</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>1.8 Server IP</h4>
+              <li>wss://legxndsmp.minecraft.pe</li>
+              <br>
+            </ul>
+            <a href="" class="card__cta cta">Copy IP</a>
+          </div>
 
-        <div class="cards__card card">
-          <h2 class="card__heading">Credits</h2>
-          <ul role="list" class="card__bullets flow">
-            <li>The developers and credits.</li>
-            <br>
-            <br>
-            <br>
-          </ul>
-          <a href="/more/credits.html" class="card__cta cta">View...</a>
-        </div>
+          <div class="cards__card card">
+            <h2 class="card__heading">GGsmp</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>1.8 Server IP</h4>
+              <li>wss://ggsmp.net/</li>
+              <br>
+            </ul>
+            <a href="" class="card__cta cta">Copy IP</a>
+          </div>
 
-      <div class="overlay cards__inner"></div>
-    </div>
-  </main>
-  </body>
+          <div class="cards__card card">
+            <h2 class="card__heading">Verise Anarchy</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>1.8 Server IP</h4>
+              <li>wss://verise.repl.co/</li>
+              <br>
+            </ul>
+            <a href="" class="card__cta cta">Copy IP</a>
+          </div>
+
+          <div class="cards__card card">
+            <h2 class="card__heading">CraftClue</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>1.8 Server IP</h4>
+              <li>wss://play.craftclue.rocks</li>
+              <br>
+            </ul>
+            <a href="" class="card__cta cta">Copy IP</a>
+          </div>
+
+          <div class="cards__card card">
+            <h2 class="card__heading">Asianf4rmer smp</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>1.8 Server IP</h4>
+              <li>wss://asianf4rmer.minecraft.pe</li>
+              <br>
+            </ul>
+            <a href="" class="card__cta cta">Copy IP</a>
+          </div>
+
+          <div class="cards__card card">
+            <h2 class="card__heading">CreaCraft</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>1.8 Server IP</h4>
+              <li>wss://sus.shhnowisnottheti.me</li>
+            </ul>
+            <a href="" class="card__cta cta">Copy IP</a>
+          </div>
+
+
+
+    <div class="overlay cards__inner"></div>
+  </div>
+</main>
+</body>
 </html>
