--- a/more/blogs.html
+++ b/more/blogs.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Eaglercrack</title>
+    <title>EaglercrackX</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 
     <nav class="nav">
       <div class="logo">
           <img src="/assets/eaglercraft.jpg" alt="Logo">
-          <h1>Eaglercrack</h1>
+          <h1>EaglercrackX</h1>
       </div>
       <div class="spacer"></div>
       <ul class="navElements">
