--- a/more.html
+++ b/more.html
@@ -71,6 +71,16 @@
         </div>
 
         <div class="cards__card card">
+          <h2 class="card__heading">Socials</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Eaglercrack socials.</li>
+            <br>
+            <br>
+          </ul>
+          <a href="/more/social.html" class="card__cta cta">View...</a>
+        </div>
+
+        <div class="cards__card card">
           <h2 class="card__heading">Google forms</h2>
           <ul role="list" class="card__bullets flow">
             <li>Make a Google form if you want to be partner, add your server/client to the list, etc.</li>
