--- a/more/social.html
+++ b/more/social.html
@@ -47,7 +47,7 @@
           <li>Eaglercrack Youtube channel</li>
           <br>
         </ul>
-        <a href="https://www.youtube.com/channel/@yeehecker241" class="card__cta cta">Open...</a>
+        <a href="https://www.youtube.com/channel/UCUYpmlgSoWoWjWdyL_n8iFA" class="card__cta cta">Open...</a>
       </div>
 
       <div class="cards__card card">
