--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>EaglercrackX</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 
@@ -36,101 +37,16 @@
 
 <body>
 <main class="cards">
-  <h1 class="cards__heading">Servers</h1>   
+  <h1 class="cards__heading">Games</h1>   
   <div class="cards cards">
     <div class="cards__inner">
       <!-- Start -->
           <div class="cards__card card">
-            <h2 class="card__heading">ArchMC</h2>
-            <ul role="list" class="card__bullets flow">
-              <h4>1.8 Server IP</h4>
-              <li>wss://mc.arch.lol</li>
-              <br>
-            </ul>
-            <a href="" class="card__cta cta">Copy IP</a>
+            <h2 class="card__heading">Eaglercraft</h2>
+            <img src="/assets/eaglercraft.jpg" class="imgT">
+            <a href="" class="card__cta cta">Play</a>
           </div>
-
-          <div class="cards__card card">
-            <h2 class="card__heading">Zentic</h2>
-            <ul role="list" class="card__bullets flow">
-              <h4>1.8 Server IP</h4>
-              <li>wss://zentic.cc</li>
-              <br>
-            </ul>
-            <a href="" class="card__cta cta">Copy IP</a>
-          </div>
-          
-          <div class="cards__card card">
-            <h2 class="card__heading">Aeon Network</h2>
-            <ul role="list" class="card__bullets flow">
-              <h4>1.8 Server IP</h4>
-              <li>wss://aeon-network.net/1.8</li>
-              <br>
-            </ul>
-            <a href="" class="card__cta cta">Copy IP</a>
-          </div>
-
-          <div class="cards__card card">
-            <h2 class="card__heading">Legend smp</h2>
-            <ul role="list" class="card__bullets flow">
-              <h4>1.8 Server IP</h4>
-              <li>wss://legxndsmp.minecraft.pe</li>
-              <br>
-            </ul>
-            <a href="" class="card__cta cta">Copy IP</a>
-          </div>
-
-          <div class="cards__card card">
-            <h2 class="card__heading">GGsmp</h2>
-            <ul role="list" class="card__bullets flow">
-              <h4>1.8 Server IP</h4>
-              <li>wss://ggsmp.net/</li>
-              <br>
-            </ul>
-            <a href="" class="card__cta cta">Copy IP</a>
-          </div>
-
-          <div class="cards__card card">
-            <h2 class="card__heading">Verise Anarchy</h2>
-            <ul role="list" class="card__bullets flow">
-              <h4>1.8 Server IP</h4>
-              <li>wss://verise.repl.co/</li>
-              <br>
-            </ul>
-            <a href="" class="card__cta cta">Copy IP</a>
-          </div>
-
-          <div class="cards__card card">
-            <h2 class="card__heading">CraftClue</h2>
-            <ul role="list" class="card__bullets flow">
-              <h4>1.8 Server IP</h4>
-              <li>wss://play.craftclue.rocks</li>
-              <br>
-            </ul>
-            <a href="" class="card__cta cta">Copy IP</a>
-          </div>
-
-          <div class="cards__card card">
-            <h2 class="card__heading">Asianf4rmer smp</h2>
-            <ul role="list" class="card__bullets flow">
-              <h4>1.8 Server IP</h4>
-              <li>wss://asianf4rmer.minecraft.pe</li>
-              <br>
-            </ul>
-            <a href="" class="card__cta cta">Copy IP</a>
-          </div>
-
-          <div class="cards__card card">
-            <h2 class="card__heading">CreaCraft</h2>
-            <ul role="list" class="card__bullets flow">
-              <h4>1.8 Server IP</h4>
-              <li>wss://sus.shhnowisnottheti.me</li>
-            </ul>
-            <a href="" class="card__cta cta">Copy IP</a>
-          </div>
-
-
-
+      <!-- End -->
     <div class="overlay cards__inner"></div>
   </div>
 </main>
