--- a/servers.html
+++ b/servers.html
@@ -37,7 +37,9 @@
 
 
 <body>
-  <div id="copyMessage" style="display: none;">IP Copied!</div>
+  <div id="copyMessage" style="display: none;" class="notify">
+  <h3>IP Copied!</h3>
+  </div>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
