--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
           </ul>        
         </div> 
         <div class="cards__card card">
-          <h2 class="card__heading">Change log</h2>
+          <h2 class="card__heading">Other Links</h2>
           <ul role="list" class="card__bullets flow">
-            <li>Added More... to Navbar</li>
-            <li>Changed Navbar</li>
-            <li>Changed </li>
+            <li><a href="https://eaglercrackx.netlify.app"><strong>eaglercrackx netlify</strong></a></li>
+            <li><a href="https://sites.google.com/view/eaglercrack"><strong>google site 1</strong></a></li>
+            <li><a href="https://sites.google.com/view/eaglercrackx"><strong>google site 2</strong></a></li>
           </ul>
         </div>
       </div>
