--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
         <div class="cards__card card">
           <h2 class="card__heading">Other Links</h2>
           <ul role="list" class="card__bullets flow">
-            <li><a href="https://eaglercrackx.netlify.app"><strong>eaglercrackx netlify</strong></a></li>
+            <li><a href="https://eaglercrackx.vercel.app"><strong>vercel 1</strong></a></li>
+            <li><a href="https://eaglercrack.vercel.app"><strong>vercel 2</strong></a></li>
+            <li><a href="https://eaglercracks.vercel.app"><strong>vercel 3</strong></a></li>
+            <li><a href="https://resentlauncher.vercel.app"><strong>vercel 4</strong></a></li>
+            <li><a href="https://eaglercrackx.netlify.app"><strong>netlify 1</strong></a></li>
+            <li><a href="https://eaglercracker.netlify.app "><strong>netlify 2</strong></a></li>
             <li><a href="https://sites.google.com/view/eaglercrack"><strong>google site 1</strong></a></li>
             <li><a href="https://sites.google.com/view/eaglercrackx"><strong>google site 2</strong></a></li>
           </ul>
