--- a/more/widget.html
+++ b/more/widget.html
@@ -8,7 +8,7 @@
     
     <nav class="nav">
       <div class="logo">
-          <img src="/eaglercraft.jpg" alt="Logo">
+          <img src="/assets/eaglercraft.jpg" alt="Logo">
           <h1>EaglercrackX</h1>
       </div>
       <div class="spacer"></div>
