--- a/more/partners.html
+++ b/more/partners.html
@@ -23,6 +23,9 @@
               <a href="/servers.html">Servers</a>
           </li>
           <li>
+            <a href="/packs.html">Packs</a>
+        </li>
+          <li>
               <a href="/more.html">More...</a>
           </li>
       </ul>
