--- a/1.3.html
+++ b/1.3.html
@@ -24,6 +24,9 @@
               <a href="/servers.html">Servers</a>
           </li>
           <li>
+            <a href="/packs.html">Packs</a>
+        </li>
+          <li>
               <a href="/more.html">More...</a>
           </li>
       </ul>
