--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <a href="/servers.html">Servers</a>
           </li>
           <li>
-            <a href="/packs.html">Texture Packs</a>
+            <a href="/packs.html">Packs</a>
         </li>
           <li>
               <a href="/more.html">More...</a>
