--- a/packs.html
+++ b/packs.html
@@ -24,6 +24,9 @@
               <a href="/servers.html">Servers</a>
           </li>
           <li>
+            <a href="/packs.html">Packs</a>
+        </li>
+          <li>
               <a href="/more.html">More...</a>
           </li>
       </ul>
@@ -37,21 +40,131 @@
 
 <body>
   <main class="cards">
-    <h1 class="cards__heading">More...</h1>
+    <h1 class="cards__heading">Texture Packs</h1>
     <div class="cards cards">
       <div class="cards__inner">
         <!-- Start the texture packs -->
 
                 <div class="cards__card card">
-          <h2 class="card__heading">Texture Pack #1</h2>
-          <img src="/assets/eaglercraft.jpg" class="imgT">
+          <img src="/assets/packs/blue.png" class="imgB">
           <ul role="list" class="card__bullets flow">
-            <li>Join the official Eaglercrack discord!</li>
-            <br>  
+            <li><h2>Blue 128x</h2></li>
+            <br>
             <br>
           </ul>
-          <a href="https://discord.gg/qAbTAAv6dU" class="card__cta cta">Join...</a>
-          <a href="/more/widget.html" class="card__cta cta">Widget Bot...</a>
+          <a href="/packs/! §9Blue §7Revamp §8§f128x§8.zip" class="card__cta cta" download>Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/nebula.png"" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Nebula 16x</h2></li>
+            <br>
+            <br>
+          </ul>
+          <a href="/packs/!      §bnebu§3l§ba §8[§f16§5x§8].zip" class="card__cta cta">Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/nicofruit.png"" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Nicofruit 16x</h2></li>
+            <br>
+            <br>
+          </ul>
+          <a href="/packs/!    §bNico§3Fruit §f[16x] (1).zip" class="card__cta cta">Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/bombies.png"" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Bombies 180k 16x</h2></li>
+            <br>
+            <br>
+          </ul>
+          <a href="/packs/!         §b§lBombies §8[§f180k§8].zip" class="card__cta cta">Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/lunar.png"" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Lunar 16x</h2></li>
+            <br>
+            <br>
+          </ul>
+          <a href="/packs/!       Lunar [§816x§f].zip" class="card__cta cta">Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/fatcat.png"" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Fatcat 16x</h2></li>
+          </ul>
+          <a href="/packs/!     §bfat cat §f[§b16§7x§f].zip" class="card__cta cta">Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/toxica.png"" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Toxica 16x</h2></li>
+          </ul>
+          <a href="/packs/!                 §5tóxica §816x.zip" class="card__cta cta">Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/venom.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Venom Revamp 16x</h2></li>
+          </ul>
+          <a href="/packs/! §9VENOM §8§l[§f§816x§l] §f§8REVAMP.zip" class="card__cta cta">Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/xlexxdv3.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>XLEXXD V3 16x</h2></li>
+          </ul>
+          <a href="/packs/!  §bxlexxd v3 §8[§f16x§8].zip class="card__cta cta">Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/tiepack.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Tie Pack 16x</h2></li>
+          </ul>
+          <a href="/packs/! §bDynamic §7Duo §8Revamp §8[§732x§8].zip" class="card__cta cta">Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/dynamicduo.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Dynamic Duo 32x</h2></li>
+          </ul>
+          <a href="/packs/! §bDynamic §7Duo §8Revamp §8[§732x§8].zip" class="card__cta cta">Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/nebula32.png" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Nebula 32x</h2></li>
+          </ul>
+          <a href="/packs/!      §bnebu§3l§ba §8[§f32§5x§8].zip" class="card__cta cta">Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/packs/war.png"" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>War V2 32x</h2></li>
+          </ul>
+          <a href="/packs/! §bWAR §8V2 §8[§f64x§8].zip" class="card__cta cta">Download</a>
+        </div>
+
+        <div class="cards__card card">
+          <img src="/assets/error.png"" class="imgB">
+          <ul role="list" class="card__bullets flow">
+            <li><h2>Proofr's Crystals Overlay</h2></li>
+          </ul>
+          <a href="/packs/crystals.html" class="card__cta cta">View</a>
         </div>
 
         <!-- End the texture packs -->
