--- a/packs/crystals.html
+++ b/packs/crystals.html
@@ -37,7 +37,7 @@
 
 <body>
   <main class="cards">
-    <h1 class="cards__heading">More...</h1>
+    <h1 class="cards__heading">Proofr's Crystals Overlay</h1>
     <div class="cards cards">
       <div class="cards__inner">
         <!-- Start the texture packs -->
