--- a/packs.html
+++ b/packs.html
@@ -40,7 +40,7 @@
 
 <body>
   <main class="cards">
-    <h1 class="cards__heading">Texture Packs</h1>
+    <h1 class="cards__heading">1.8 Texture Packs</h1>
     <div class="cards cards">
       <div class="cards__inner">
         <!-- Start the texture packs -->
