--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
         <div class="cards__card card">
           <h2 class="card__heading">Updates</h2>
           <ul role="list" class="card__bullets flow">
-            <li>No Updates</li>
+            <li>[+] Texture packs page</li>
           </ul>        
         </div> 
+        
         <div class="cards__card card">
           <h2 class="card__heading">Other Links</h2>
           <ul role="list" class="card__bullets flow">
