--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="cards__card card">
           <h2 class="card__heading">Updates</h2>
           <ul role="list" class="card__bullets flow">
-            <li>[+] Texture packs page</li>
+            <li>Check the discord for updates!</li>
           </ul>        
         </div> 
         
