--- a/packs.html
+++ b/packs.html
@@ -124,7 +124,7 @@
           <ul role="list" class="card__bullets flow">
             <li><h2>XLEXXD V3 16x</h2></li>
           </ul>
-          <a href="/packs/!  §bxlexxd v3 §8[§f16x§8].zip class="card__cta cta">Download</a>
+          <a href="/packs/!  §bxlexxd v3 §8[§f16x§8].zip" class="card__cta cta">Download</a>
         </div>
 
         <div class="cards__card card">
