--- a/more/widget.html
+++ b/more/widget.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
     <title>EaglercrackX</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     
     <nav class="nav">
       <div class="logo">
           <img src="/assets/eaglercraft.jpg" alt="Logo">
-          <h1>EaglercrackX</h1>
+          <a href="/index.html"><h1>EaglercrackX</h1></a>
       </div>
       <div class="spacer"></div>
       <ul class="navElements">
