--- a/1.8.html
+++ b/1.8.html
@@ -10,7 +10,7 @@
     <nav class="nav">
       <div class="logo">
           <img src="/assets/eaglercraft.jpg" alt="Logo">
-          <h1>EaglercrackX</h1>
+          <a href="/index.html"><h1>EaglercrackX</h1></a>
       </div>
       <div class="spacer"></div>
       <ul class="navElements">
