--- a/404.html
+++ b/404.html
@@ -1,14 +1,57 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
-    <link href="./style.css" rel="stylesheet" />
-  </head>
+    <link rel="stylesheet" href="style.css">
+    <title>EaglercrackX</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+    
+    <nav class="nav">
+      <div class="logo">
+        <img src="/assets/eaglercraft.jpg" alt="Logo">
+        <a href="/index.html"><h1>EaglercrackX</h1></a>
+      </div>
+      <div class="spacer"></div>
+      <ul class="navElements">
+          <li class="active">
+              <a href="/index.html">Home</a>
+          </li>
+          <li>
+              <a href="/clients.html">Clients</a>
+          </li>
+          <li>
+              <a href="/servers.html">Servers</a>
+          </li>
+          <li>
+            <a href="/packs.html">Packs</a>
+        </li>
+          <li>
+              <a href="/more.html">More...</a>
+          </li>
+      </ul>
+      <div style="margin: 0 30px 0 0;">
+          <a class="button" href="https://discord.gg/qAbTAAv6dU">
+              Join the Discord
+          </a>
+      </div>
+  </nav>
+</head>
+
+<body>
+  <main class="cards">
+    <h1 class="cards__heading">404</h1>
+    <div class="cards cards">
+      <div class="cards__inner">
+        <div class="cards__card card">
+          <h2 class="card__heading">Looks like you reached a unknown page...</h2>
+          <ul role="list" class="card__bullets flow"> 
+            <li><a href="/index.html">Go back</a></li>
+          </ul>
+        </div>
+      <div class="overlay cards__inner"></div>
+    </div>
+  </main>
   
-  <body>
-    <h1>404</h1>
-    <p>Page could not be found.</p>
-  </body>
+</body>
 </html>
