--- a/more/partners.html
+++ b/more/partners.html
@@ -9,7 +9,7 @@
     <nav class="nav">
       <div class="logo">
           <img src="/eaglercraft.jpg" alt="Logo">
-          <h1>EaglercrackX</h1>
+          <a href="/index.html"><h1>EaglercrackX</h1></a>
       </div>
       <div class="spacer"></div>
       <ul class="navElements">
