--- a/404.html
+++ b/404.html
@@ -46,7 +46,7 @@
         <div class="cards__card card">
           <h2 class="card__heading">Looks like you reached a unknown page...</h2>
           <ul role="list" class="card__bullets flow"> 
-            <li><a href="/index.html">Go back</a></li>
+            <li><a href="/index.html">Go to home</a></li>
           </ul>
         </div>
       <div class="overlay cards__inner"></div>
