--- a/servers.html
+++ b/servers.html
@@ -41,7 +41,7 @@
  
  <script>
      var urlObj = new window.URL(window.location.href);
-     var url = "https://eaglercrack-archive.vercel.app";
+     var url = "https://eaglercrackx.vercel.app";
      if (url) {
        var win;
  
