--- a/more.html
+++ b/more.html
@@ -96,7 +96,7 @@
           <ul role="list" class="card__bullets flow">
             <li>Looking for <strong>MORE</strong> clients? Eaglercrack Archive is the <strong>BIGGEST</strong> eaglercraft archive!</li>
           </ul>
-          <a href="https://eaglercrack-archive.vercel.app" class="card__cta cta">Soon...</a>
+          <a href="https://eaglercrack-archive.vercel.app" class="card__cta cta">Visit...</a>
         </div>
 
         <div class="cards__card card">
