fixed servers ip copy

--- a/servers.html
+++ b/servers.html
@@ -172,7 +172,7 @@
               <li>wss://clever-teaching.com/web/</li>
               <br>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://verise.repl.co/">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://clever-teaching.com/web/">Copy IP</a>
           </div>
 
           <div class="cards__card card">
@@ -211,7 +211,7 @@
               <h4>Server IP</h4>
               <li>wss://intelle.cloud/soccer</li>
             </ul>
-            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://sus.shhnowisnottheti.me">Copy IP</a>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://intelle.cloud/soccer">Copy IP</a>
           </div>
 
           <div class="cards__card card">
