--- a/blogs/bestfps.html
+++ b/blogs/bestfps.html
@@ -80,14 +80,22 @@
 <br>
 <br>
 <h1 class="h1a">Best FPS Settings for Eaglercraft</h1>
+<h1 class="h1d">(1.8 only)</h1>
 <br>
 <br>
 <br>
-<h3 class="h1b">1. Click "Options"</h3>
-<h3 class="h1b">2. Click "Video Settings...</h3>
-<h3 class="h1b">3. Copy the settings below</h3>
-<h3 class="h1b">4. Try different mipmap levels to see if it increases fps. Some run it better at the highest and some run it better at the lowest.</h3>
-<h3 class="h1b">5. Done!</h3>
+<h1 class="h1c">Normal Eaglercraft</h1>
+<br>
+<a class="h1b">1. Click "Options"</a>
+<br>
+<a class="h1b">2. Click "Video Settings...</a>
+<br>
+<a class="h1b">3. Copy the settings below</a>
+<br>
+<a class="h1b">4. Try different mipmap levels to see if it increases fps. Some run it better at the highest and some run it better at the lowest.</h3>
+<br>
+<a class="h1b">5. Done!</a>
+<br>
 <img src="/assets/fps1.png">
 <br>
 <img src="/assets/fps2.png">
@@ -97,50 +105,58 @@
 <br>
 <br>
 <br>
-<h1 class="h1a">Best Resent Settings</h1>
+<h1 class="h1c">Best Resent Settings</h1>
+<br>
+<a class="h1b">1. Load Resent</a>
+<br>
+<a class="h1b">2. Join Server</a>
+<br>
+<a class="h1b">3. Press Right Shift</a>
+<br>
+<a class="h1b">4. Look for "FPS Options" And enable it</a>
+<br>
+<a class="h1b">5. Press the settings icon on the FPS Options part</a>
+<br>
+<a class="h1b">6. Enable all</a>
+<br>
+<a class="h1b">7. Enable the "Best FPS Settings for Eaglercraft" settings showed above.</a>
+<br>
+<a class="h1b">7. Done!</a>
 <br>
 <br>
 <br>
-<h3 class="h1b">1. Load Resent</h3>
-<h3 class="h1b">2. Join Server</h3>
-<h3 class="h1b">3. Press Right Shift</h3>
-<h3 class="h1b">4. Look for "FPS Options" And enable it</h3>
-<h3 class="h1b">5. Press the settings icon on the FPS Options part</h3>
-<h3 class="h1b">6. Enable all</h3>
-<h3 class="h1b">7. Enable the "Best FPS Settings for Eaglercraft" settings showed above.</h3>
-<h3 class="h1b">7. Done!</h3>
 <br>
 <br>
 <br>
+<h1 class="h1c">Best Shadow Client Settings</h1>
 <br>
+<a class="h1b">1. Load Shadow Client</a>
 <br>
+<a class="h1b">2. Click "Options"</a>
 <br>
-<h1 class="h1a">Best Shadow Client Settings</h1>
+<a class="h1b">3. Click "Video Settings..."</a>
 <br>
+<a class="h1b">4. Copy the settings below</a>>
 <br>
+<a class="h1b">5. Enable the "Best FPS Settings for Eaglercraft" settings showed above.</a>
 <br>
-<h3 class="h1b">1. Load Shadow Client</h3>
-<h3 class="h1b">2. Click "Options"</h3>
-<h3 class="h1b">3. Click "Video Settings..."</h3>
-<h3 class="h1b">4. Copy the settings below</h3>
-<h3 class="h1b">5. Enable the "Best FPS Settings for Eaglercraft" settings showed above.</h3>
-<h3 class="h1b">6. Done!</h3>
+<a class="h1b">6. Done!</a>
 <br>
 <img src="/assets/fps3.png">
 <br>
-<h2 class="h1b">Quality... (try different mipmap settings to see if they increase fps)</h2>
+<a class="h1b">Quality... (try different mipmap settings to see if they increase fps)</a>
 <br>
 <img src="/assets/fps4.png">
 <br>
-<h2 class="h1b">Details...</h2>
+<a class="h1b">Details...</a>
 <br>
 <img src="/assets/fps5.png">
 <br>
-<h2 class="h1b">Animations...(click all off)</h2>
+<a class="h1b">Animations...(click all off)</a>
 <br>
 <img src="/assets/fps6.png">
 <br>
-<h2 class="h1b">Performance...</h2>
+<a class="h1b">Performance...</a>
 <br>
 <img src="/assets/fps7.png">
 <br>
