--- a/more/blogs.html
+++ b/more/blogs.html
@@ -83,13 +83,37 @@
                 <div class="cards__card card">
           <h2 class="card__heading">Best Eaglercraft settings</h2>
           <ul role="list" class="card__bullets flow">
-            <li>Best Eaglercraft FPS settings.</li>
-            <br>  
-            <br>
+            <li>Best 1.8 Eaglercraft FPS settings.</li>
           </ul>
           <a href="/blogs/bestfps.html" class="card__cta cta">View...</a>
         </div>
 
+        <div class="cards__card card">
+          <h2 class="card__heading">Eaglercraft bugs and issues</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>How to fix certain bugs.</li>
+          </ul>
+          <a href="/blogs/issue.html" class="card__cta cta">View...</a>
+        </div>
+
+        <div class="cards__card card">
+          <h2 class="card__heading">Update Log</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>All the updates logged.</li>
+            <br>  
+          </ul>
+          <a href="/blogs/updates.html" class="card__cta cta">View...</a>
+        </div>
+
+        <div class="cards__card card">
+          <h2 class="card__heading">Links</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>More Eaglercrack links</li>
+            <br>  
+          </ul>
+          <a href="/blogs/links.html" class="card__cta cta">View...</a>
+        </div>
+        <!-- End the blogs-->
       <div class="overlay cards__inner"></div>
     </div>
   </main>
