--- a/servers.html
+++ b/servers.html
@@ -223,7 +223,15 @@
             <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://sus.shhnowisnottheti.me">Copy IP</a>
           </div>
 
-
+          <div class="cards__card card">
+            <h2 class="card__heading">Lifesteal</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>Server IP</h4>
+              <li>wss://lifesteal.matthewkrupenya.repl.co/server</li>
+              <br>
+            </ul>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://lifesteal.matthewkrupenya.repl.co/server">Copy IP</a>
+          </div>
 
     <div class="overlay cards__inner"></div>
   </div>
