--- a/more.html
+++ b/more.html
@@ -101,7 +101,7 @@
         <div class="cards__card card">
           <h2 class="card__heading">Blogs</h2>
           <ul role="list" class="card__bullets flow">
-            <li>Eaglercrack blogs for help.</li>
+            <li>Eaglercrack blogs about topics.</li>
             <br>
             <br>
           </ul>
@@ -109,13 +109,13 @@
         </div>
 
         <div class="cards__card card">
-          <h2 class="card__heading">Socials</h2>
+          <h2 class="card__heading">about:blank loader</h2>
           <ul role="list" class="card__bullets flow">
-            <li>Eaglercrack socials.</li>
-            <br>
+            <li>Load a site in about:blank.</li>
+            <li>(BETA)</li>
             <br>
           </ul>
-          <a href="/more/social.html" class="card__cta cta">View...</a>
+          <a href="/more/blank.html" class="card__cta cta">View...</a>
         </div>
 
         <div class="cards__card card">
