--- a/blogs/bestfps.html
+++ b/blogs/bestfps.html
@@ -96,9 +96,9 @@
 <br>
 <a class="h1b">5. Done!</a>
 <br>
-<img src="/assets/fps1.png">
+<img src="/assets/fps1.png" class="imgA">
 <br>
-<img src="/assets/fps2.png">
+<img src="/assets/fps2.png" class="imgA">
 <br>
 <br>
 <br>
@@ -142,23 +142,23 @@
 <br>
 <a class="h1b">6. Done!</a>
 <br>
-<img src="/assets/fps3.png">
+<img src="/assets/fps3.png" class="imgA">
 <br>
 <a class="h1b">Quality... (try different mipmap settings to see if they increase fps)</a>
 <br>
-<img src="/assets/fps4.png">
+<img src="/assets/fps4.png" class="imgA">
 <br>
 <a class="h1b">Details...</a>
 <br>
-<img src="/assets/fps5.png">
+<img src="/assets/fps5.png" class="imgA">
 <br>
 <a class="h1b">Animations...(click all off)</a>
 <br>
-<img src="/assets/fps6.png">
+<img src="/assets/fps6.png" class="imgA">
 <br>
 <a class="h1b">Performance...</a>
 <br>
-<img src="/assets/fps7.png">
+<img src="/assets/fps7.png" class="imgA">
 <br>
 </body>
 </html>
