--- a/more/blogs.html
+++ b/more/blogs.html
@@ -76,7 +76,7 @@
 
 <body>
   <main class="cards">
-    <h1 class="cards__heading">More...</h1>
+    <h1 class="cards__heading">Blogs</h1>
     <div class="cards cards">
       <div class="cards__inner">
         <!-- Start the blogs -->
