modified:   blogs/updates.html

--- a/blogs/updates.html
+++ b/blogs/updates.html
@@ -84,6 +84,30 @@
 <br>
 <br>
 <br>
+<h1 class="h1c">Big Update 4 (1/7/24)</h1>
+<br>
+<h1 class="h1b">[+] Added about:blank loader (BETA)</h1>
+<br>
+<h1 class="h1b">[+] Added Update Log blog</h1>
+<br>
+<h1 class="h1b">[+] Added Sfactions server to server list</h1>
+<br>
+<h1 class="h1b">[+] Added Lifesteal server to server list</h1>
+<br>
+<h1 class="h1b">[~] Minor changes on blog pages</h1>
+<br>
+<h1 class="h1b">[~] Other Minor changes</h1>
+<br>
+<h1 class="h1b">[-] Removed socials page</h1>
+<br>
+<h1 class="h1b">[~] Removed other links on home page and moved to blogs</h1>
+<br>
+<h1 class="h1b">[-] Removed sticky from notification on server list</h1>
+<br>
+<br>
+<br>
+<br>
+<br>
 <h1 class="h1c">Big Update 3 (12/24/23)</h1>
 <br>
 <a class="h1b">[+] Eaglercrack Archive</a>
