modified:   blogs/updates.html

--- a/blogs/updates.html
+++ b/blogs/updates.html
@@ -84,6 +84,21 @@
 <br>
 <br>
 <br>
+<h1 class="h1c">Small Update 1 (1/7/24)</h1>
+<br>
+<h1 class="h1b">[+] Added Sfactions server to #servers channel in discord</h1>
+<br>
+<h1 class="h1b">[+] Added Lifesteal server to #servers channel in discord</h1>
+<br>
+<h1 class="h1b">[+] Added creative gamemode to ayun server in #server channel in discord</h1>
+<br>
+<h1 class="h1b">[+] Added "[!] = Notice" to #updates channel description in discord</h1>
+<br>
+<h1 class="h1b">[~] Updated update log</h1>
+<br>
+<h1 class="h1b">[!] Other links moved to blogs page</h1>
+
+
 <h1 class="h1c">Big Update 4 (1/7/24)</h1>
 <br>
 <h1 class="h1b">[+] Added about:blank loader (BETA)</h1>
