modified:   blogs/updates.html

--- a/blogs/updates.html
+++ b/blogs/updates.html
@@ -86,17 +86,17 @@
 <br>
 <h1 class="h1c">Small Update 1 (1/7/24)</h1>
 <br>
-<h1 class="h1b">[+] Added Sfactions server to #servers channel in discord</h1>
+<a class="h1b">[+] Added Sfactions server to #servers channel in discord</a>
 <br>
-<h1 class="h1b">[+] Added Lifesteal server to #servers channel in discord</h1>
+<a class="h1b">[+] Added Lifesteal server to #servers channel in discord</a>
 <br>
-<h1 class="h1b">[+] Added creative gamemode to ayun server in #server channel in discord</h1>
+<a class="h1b">[+] Added creative gamemode to ayun server in #server channel in discord</a>
 <br>
-<h1 class="h1b">[+] Added "[!] = Notice" to #updates channel description in discord</h1>
+<a class="h1b">[+] Added "[!] = Notice" to #updates channel description in discord</a>
 <br>
-<h1 class="h1b">[~] Updated update log</h1>
+<a class="h1b">[~] Updated update log</a>
 <br>
-<h1 class="h1b">[!] Other links moved to blogs page</h1>
+<a class="h1b">[!] Other links moved to blogs page</a>
 <br>
 <br>
 <br>
@@ -104,23 +104,23 @@
 <br>
 <h1 class="h1c">Big Update 4 (1/7/24)</h1>
 <br>
-<h1 class="h1b">[+] Added about:blank loader (BETA)</h1>
+<a class="h1b">[+] Added about:blank loader (BETA)</a>
 <br>
-<h1 class="h1b">[+] Added Update Log blog</h1>
+<a class="h1b">[+] Added Update Log blog</a>
 <br>
-<h1 class="h1b">[+] Added Sfactions server to server list</h1>
+<a class="h1b">[+] Added Sfactions server to server list</a>
 <br>
-<h1 class="h1b">[+] Added Lifesteal server to server list</h1>
+<a class="h1b">[+] Added Lifesteal server to server list</a>
 <br>
-<h1 class="h1b">[~] Minor changes on blog pages</h1>
+<a class="h1b">[~] Minor changes on blog pages</a>
 <br>
-<h1 class="h1b">[~] Other Minor changes</h1>
+<a class="h1b">[~] Other Minor changes</a>
 <br>
-<h1 class="h1b">[-] Removed socials page</h1>
+<a class="h1b">[-] Removed socials page</a>
 <br>
-<h1 class="h1b">[~] Removed other links on home page and moved to blogs</h1>
+<a class="h1b">[~] Removed other links on home page and moved to blogs</h1>
 <br>
-<h1 class="h1b">[-] Removed sticky from notification on server list</h1>
+<a class="h1b">[-] Removed sticky from notification on server list</a>
 <br>
 <br>
 <br>
