--- a/servers/servers.html
+++ b/servers/servers.html
@@ -1,14 +1,76 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Eaglercraft Server Embed Test</title>
-<script type="text/javascript" src="embed.js"></script>
-<script type="text/javascript">
-window.addEventListener("load", () => {
-	new ServerEmbed(document.getElementById("embed"), "40%").ping("127.0.0.1:25565");
-});
-</script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
+    <title>EaglercrackX</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+    
+    <nav class="nav">
+        <div class="logo">
+            <img src="/assets/eaglercraft.jpg" alt="Logo">
+            <a href="/index.html"><h1>EaglercrackX</h1></a>
+        </div>
+        <div class="spacer"></div>
+        <ul class="navElements">
+            <li class="active">
+                <a href="/index.html">Home</a>
+            </li>
+            <li>
+                <a href="/clients.html">Clients</a>
+            </li>
+            <li>
+                <a href="/servers.html">Servers</a>
+            </li>
+            <li>
+                <a href="/packs.html">Packs</a>
+            </li>
+            <li>
+                <a href="/more.html">More...</a>
+            </li>
+        </ul>
+        
+        <div style="margin: 0 30px 0 0;">
+            <a class="button" href="https://discord.gg/qAbTAAv6dU">
+                Join the Discord
+            </a>
+        </div>
+    </nav>
+    <br>
+    <br>
+    <br>
+    <h1 class="h1a">Eaglercraft server checker</h1>
+    <h1 class="h1d">(Add wss://)</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="inputContainer">
+        <input type="url" id="serverInput" onkeydown="if(event.key==='Enter') go()" size="25" class="inputText" autofocus>
+        <button onclick="go()" class="inputGo">Go</button>
+    </div>
+    <br>
+    <br>
+    <br>
+    <script type="text/javascript" src="embed.js"></script>
+    <script type="text/javascript">
+        function go() {
+            var userInput = document.getElementById("serverInput").value;
+            new ServerEmbed(document.getElementById("embed"), "50%").ping(userInput);
+        }
+
+        window.addEventListener("load", () => {
+            go();
+        });
+    </script>
 </head>
-<body style="background-color:black;">
-<div id="embed"></div>
+<body>
+    <div id="embed" class="server-embed"></div>
 </body>
 </html>
+
+
+
+<!--    (Server Embed Credit:  https://github.com/lax1dude/eaglercraft-HTML5_Ping_Embed)       -->
