--- a/test.html
+++ b/test.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>EaglercrackX</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-
+    
     <nav class="nav">
       <div class="logo">
-          <img src="/assets/eaglercraft.jpg" alt="Logo">
-          <a href="/index.html"><h1>EaglercrackX</h1></a>
+        <img src="/assets/eaglercraft.jpg" alt="Logo">
+        <a href="/index.html"><h1>EaglercrackX</h1></a>
       </div>
       <div class="spacer"></div>
       <ul class="navElements">
@@ -30,90 +30,44 @@
               <a href="/more.html">More...</a>
           </li>
       </ul>
-      <!--start blank -->
-      <div style="margin: 0 30px 0 0;">
-        <button> <a class="button2" href="https://google.com">
-             about:blank
-         </a>
-         </button>
-     </div>
- 
- <script>
-     var urlObj = new window.URL(window.location.href);
-     var url = "https://eaglercrackx.vercel.app";
-     if (url) {
-       var win;
- 
-       document.querySelector('button').onclick = function() {
-         if (win) {
-           win.focus();
-         } else {
-           win = window.open();
-           win.document.body.style.margin = '0';
-           win.document.body.style.height = '100vh';
-           var iframe = win.document.createElement('iframe');
-           iframe.style.border = 'none';
-           iframe.style.width = '100%';
-           iframe.style.height = '100%';
-           iframe.style.margin = '0';
-           iframe.src = url;
-           win.document.body.appendChild(iframe);
-         }
-         document.querySelector('button').style.bacground = 'grey';
-         document.querySelector('button').innerHTML = "Play Now";
-       };
-     }
- 
-   </script>
- <!-- end blank -->
+      
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/qAbTAAv6dU">
               Join the Discord
           </a>
       </div>
   </nav>
+
+  <script src="https://cdn.jsdelivr.net/gh/FogNetwork/ABC/index.js"></script>
+  <script>
+    function validURL(str) {
+  var pattern = new RegExp('^(https?:\\/\\/)?'+ // protocol
+    '((([a-z\\d]([a-z\\d-]*[a-z\\d])*)\\.)+[a-z]{2,}|'+ // domain name
+    '((\\d{1,3}\\.){3}\\d{1,3}))'+ // OR ip (v4) address
+    '(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*'+ // port and path
+    '(\\?[;&a-z\\d%_.~+=-]*)?'+ // query string
+    '(\\#[-a-z\\d_]*)?$','i'); // fragment locator
+  return !!pattern.test(str);
+}
+    function go() {
+      var page = new ABC({
+        "type": "blank",
+        "url": validURL(document.querySelector('input').value) ? document.querySelector('input').value : window.location.origin
+      })
+      page.open()
+    }
+  </script>
 </head>
 
-<body>
-  <main class="cards">
-    <h1 class="cards__heading">Blogs</h1>
-    <div class="cards cards">
-      <div class="cards__inner">
-        <!-- Start the blogs -->
-                <div class="cards__card card">
-          <h2 class="card__heading">Best Eaglercraft settings</h2>
-          <ul role="list" class="card__bullets flow">
-            <li>Best 1.8 Eaglercraft FPS settings.</li>
-          </ul>
-          <a href="/blogs/bestfps.html" class="card__cta cta">View...</a>
-        </div>
+<div class="cards">
+    <h1 class="cards__heading">about:blank site loader</h1>
+</div>
 
-        <div class="cards__card card">
-          <h2 class="card__heading">Eaglercraft bugs and issues</h2>
-          <ul role="list" class="card__bullets flow">
-            <li>How to fix certain bugs.</li>
-          </ul>
-          <a href="/blogs/issue.html" class="card__cta cta">View...</a>
-        </div>
+<div class="main" style="text-align: center;">
+    <input type="url" onkeydown="if(event.key==='Enter') go()" size="25" autofocus>
+    <button onclick="go()">Go</button><br>
+  </div>
 
-        <div class="cards__card card">
-          <h2 class="card__heading">Update Log</h2>
-          <ul role="list" class="card__bullets flow">
-            <li>All the updates logged.</li>
-          </ul>
-          <a href="/blogs/updates.html" class="card__cta cta">View...</a>
-        </div>
 
-        <div class="cards__card card">
-          <h2 class="card__heading">Links</h2>
-          <ul role="list" class="card__bullets flow">
-            <li>More Eaglercrack links</li>
-          </ul>
-          <a href="/blogs/links.html" class="card__cta cta">View...</a>
-        </div>
-        <!-- End the blogs-->
-      <div class="overlay cards__inner"></div>
-    </div>
-  </main>
-  </body>
+</body>
 </html>
