--- a/more.html
+++ b/more.html
@@ -74,6 +74,16 @@
         </div>
 
         <div class="cards__card card">
+          <h2 class="card__heading">Server Checker</h2>
+          <ul role="list" class="card__bullets flow">
+            <li>Eaglercraft Server Checker</li>
+            <li>(only eaglercraft servers)</li>
+            <br>
+          </ul>
+          <a href="/servers/servers.html" class="card__cta cta">View...</a>
+        </div>
+
+        <div class="cards__card card">
           <h2 class="card__heading">about:blank loader</h2>
           <ul role="list" class="card__bullets flow">
             <li>Load a site in about:blank.</li>
