--- a/more/credits.html
+++ b/more/credits.html
@@ -47,11 +47,16 @@
 <h1 class="h1a">Eaglercrack Credits</h1>
 <br>
 <br>
-<h1 class="h1b">Website Developers and Staff</h1>
+<h1 class="h1c">Website Developers and Staff</h1>
 <br>
-<ul class="h1l">
-<li>Rimm</li>
-<li>Proofr</li>
-</ul>
+<a class="h1b" href="https://discord.com/users/1153670965939675249">Proofr</a>
+<br>
+<a class="h1b" href="https://discord.com/users/475738572104663062">Rimm</a>
+<br>
+<br>
+<br>
+<br>
+<h1 class="h1c">HTML5 Ping Embed (Used in server checker)</h1>
+<a href="https://github.com/lax1dude/eaglercraft-HTML5_Ping_Embed" class="h1b">https://github.com/lax1dude/eaglercraft-HTML5_Ping_Embed</a>
 </body>
 </html>
