--- a/packs.html
+++ b/packs.html
@@ -172,5 +172,9 @@
       <div class="overlay cards__inner"></div>
     </div>
   </main>
+  <br>
+  <br>
+  <h1 class="h1b" style="text-align:center;">I do NOT own any of these texture packs.</h1>
+  <br>
   </body>
 </html>
