--- a/servers.html
+++ b/servers.html
@@ -141,6 +141,16 @@
           </div>
 
           <div class="cards__card card">
+            <h2 class="card__heading">MessCraft</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>Server IP</h4>
+              <li>wss://mess.eu.org/s1/</li>
+              <br>
+            </ul>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://mess.eu.org/s1/">Copy IP</a>
+          </div>
+
+          <div class="cards__card card">
             <h2 class="card__heading">Verise Anarchy</h2>
             <ul role="list" class="card__bullets flow">
               <h4>Server IP</h4>
@@ -177,6 +187,25 @@
               <li>wss://intelle.cloud/soccer</li>
             </ul>
             <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://intelle.cloud/soccer">Copy IP</a>
+          </div>
+
+          <div class="cards__card card">
+            <h2 class="card__heading">Dxomg Proxy</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>Server IP</h4>
+              <li>wss://mcus1.dxomg.link</li>
+              <br>
+            </ul>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip="wss://mcus1.dxomg.link">Copy IP</a>
+          </div>
+
+          <div class="cards__card card">
+            <h2 class="card__heading">MythSMP</h2>
+            <ul role="list" class="card__bullets flow">
+              <h4>Server IP</h4>
+              <li> wss://mc.theludos.com</li>
+            </ul>
+            <a href="" class="card__cta cta" id="copyIP2" data-ip=" wss://mc.theludos.com">Copy IP</a>
           </div>
 
           <div class="cards__card card">
