--- a/blogs/links.html
+++ b/blogs/links.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="/style.css">
     <title>EaglercrackX</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-    
     <nav class="nav">
       <div class="logo">
         <img src="/assets/eaglercraft.jpg" alt="Logo">
@@ -30,7 +29,6 @@
               <a href="/more.html">More...</a>
           </li>
       </ul>
-    
       <div style="margin: 0 30px 0 0;">
           <a class="button" href="https://discord.gg/qAbTAAv6dU">
               Join the Discord
@@ -38,9 +36,7 @@
       </div>
   </nav>
 </head>
-
 <body>
-
 <br>
 <br>
 <br>
@@ -68,5 +64,15 @@
 <a class="h1b" href="https://eaglercrackx.netlify.app/">https://eaglercrackx.netlify.app/</a>
 <br>
 <a class="h1b" href="https://eaglercracks.vercel.app/">https://eaglercracks.vercel.app/</a>
+<br>
+<br>
+<br>
+<br>
+<h1 class="h1c">Other Links</h1>
+<br>
+<a class="h1b" href="https://eaglercrack.github.io">https://eaglercrack.github.io</a>
+<br>
+<br>
+<a></a> <!-- added <a> because the breaks wouldn't show without -->
 </body>
 </html>
